tests/invalid/array/missing_enclosing_bracket.fred
[
    123
    123
    [
        "42"
        "test"
]